Camlp5 Version 7.12:
--------------------

* [29 Apr 20] upgrade to minimal support for Ocaml 4.11.0
  (specifically 4.11.0+dev2-2020-04-22).  This does not provide
  support for any new stuff in 4.11.0; indeed, stuff may break.  This
  is just minimal "build and bootstrap" support.

Camlp5 Version 7.11:
--------------------

* [26 Mar 20] forgot to add that this supports ocaml version 4.10.0.
  added findlib packages for "camlp5.pr_o", "camlp5.pr_r" and "camlp5.pr_dump",
  which load the appropriate archives into the toploop and preprocessor.
  Added a "topfind.camlp5" file that can be "#use"ed instead of "topfind",
  and will provide the commands "#camlp5o" and "#camlp5r".

* [29 Oct 19] Added compatibility with ocaml version 4.08.2.
* [29 Oct 19] Added compatibility with ocaml version 4.09.1.
* [03 Feb 20] Added compatibility with ocaml version 4.10+beta2.

* This release supports blank module-names in binders as well as
  generative functors.

Camlp5 Version 7.10:
--------------------

* [24 Aug 19] Fixed problem of compatibility with ocaml versions less
  than 4.08, lost after camlp5 version 7.08, making compilation of
  camlp5 impossible. Due to dynamic loading.

Camlp5 Version 7.09:
--------------------

Camlp5 Version 7.08:
--------------------

* [02 Aug 19] Updated for (incoming) ocaml version 4.10.0.
* [02 Aug 19] Updated for ocaml version 4.09.0.
* [27 Jun 19] Updated for ocaml version 4.08.1.
* [27 Jun 19] Updated for ocaml version 4.08.0 (by github user madroach).
* [27 Jun 19] Added raw string syntax (by Check Murthy).
* [21 Dec 18] Fixed bug: in printer pr_o.cmo, comment did not get passed
  through after "let in".

Camlp5 Version 7.07:
--------------------

* [10 Oct 18] Changed '/bin/rm' into 'rm' in Makefiles. Can be changed by
  user by 'make RM=...'.
* [08 Oct 18] Updated for ocaml version 4.07.2.
* [19 Sep 18] Updated for ocaml upcomming version 4.08.0.
* [18 Sep 18] Fixed bug: using camlp5 in ocaml toplevel, the errors locations