@@ -1,6 +1,10 @@
 Camlp5 Version 7.12:
 --------------------
 
+* [29 Apr 20] Added a new "topfind.camlp5" script that can be #used
+  just like "topfind"; it defines #camlp5o and #camlp5r commands (like
+  topfind's #camlp4o and $camlp4r commands)
+
 * [29 Apr 20] upgrade to minimal support for Ocaml 4.11.0
   (specifically 4.11.0+dev2-2020-04-22).  This does not provide
   support for any new stuff in 4.11.0; indeed, stuff may break.  This
